fix: apply Sonar S6877 — replace nested min/max with Math.clamp
- replace Math.max(min, Math.min(value, max)) with Math.clamp across ChallengeQuizService, LongExamService, QuizGenerationService, StubLlmStudyPackService
- fix AnalyticsServiceTest IDE error: use static import for ArgumentMatchers.any
- add 3 unit tests for listRecentSessions limit clamping in QuickReviewSessionServiceTest
- update AGENTS.md and CLAUDE.md: Math.clamp is the standard for Java 21

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>