@@ -252,7 +252,7 @@ public class ChallengeQuizService {
         UUID studyPackId = parseStudyPackId(studyPackIdRaw);
         findOwnedStudyPackOrThrow(studyPackId, userId);
 
-        int normalizedLimit = Math.max(1, Math.min(limit, MAX_RECENT_SESSION_LIMIT));
+        int normalizedLimit = Math.clamp(limit, 1, MAX_RECENT_SESSION_LIMIT);
         return quickReviewSessionRepository.findByUserIdAndStudyPackIdAndSessionModeAndCompletedAtIsNotNullOrderByCompletedAtDesc(
                         userId,
                         studyPackId,
@@ -311,7 +311,7 @@ public class ChallengeQuizService {
         assertSessionInProgress(session);
 
         int totalQuestions = session.getTotalQuestions() == null ? 0 : session.getTotalQuestions();
-        int normalizedIndex = Math.max(0, Math.min(request.currentQuestionIndex(), Math.max(0, totalQuestions - 1)));
+        int normalizedIndex = Math.clamp(request.currentQuestionIndex(), 0, Math.max(0, totalQuestions - 1));
         session.setCurrentQuestionIndex(normalizedIndex);
         session.setSessionState(mergeSessionState(session.getSessionState(), request.sessionState()));
         QuickReviewSessionEntity saved = quickReviewSessionRepository.save(session);
@@ -846,7 +846,7 @@ public class ChallengeQuizService {
     ) {
         if (quiz == null || quiz.isEmpty()) {
             int totalQuestions = Math.max(1, fallbackTotalQuestions);
-            int correctAnswers = Math.max(0, Math.min(fallbackCorrectAnswers, totalQuestions));
+            int correctAnswers = Math.clamp(fallbackCorrectAnswers, 0, totalQuestions);
             BigDecimal percentage = BigDecimal.valueOf(correctAnswers)
                     .multiply(BigDecimal.valueOf(100))
                     .divide(BigDecimal.valueOf(totalQuestions), 2, RoundingMode.HALF_UP);
